--- a/scss/partial/_formules.scss
+++ b/scss/partial/_formules.scss
@@ -9,17 +9,36 @@ $yellow_lighten: lighten(#fff000, 45%);
 $yellow_darker: darken(#fff000, 0.5%);
 $yellow_semi_transparent: fade-out(#fff000, 0.6);
 
+$size_5: 5px;
 $size_10: 10px;
 $size_13: 13px;
+$size_15: 15px;
+$size_20: 20px;
 
+$border_black_1: 1px solid #000;
+$border_black_2: 2px solid #000;
+$border_black_5: 2px solid #000;
 
-$border_black: 1px solid #000;
-
-%text_bold_center {
+/*%text_bold_center {
   text-align: center;
   font-weight: bold;
+}*/
+
+
+@mixin mp-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
+@mixin px-10 {
+  padding-top: $size_10;
+  padding-bottom: $size_10;
+}
 
-$mp_auto: auto;
+@mixin dark_shadow-txt_w {
+  font-family: 'Gloria Hallelujah', cursive;
+  background: lighten(#000000, 30%);
+  box-shadow:  0 0.8em .6em darken($black, 0.9%);
+  color: white ;
+}
 
