--- a/scss/partial/_titles.scss
+++ b/scss/partial/_titles.scss
@@ -1,70 +1,118 @@
-@import "formules.scss";
+@import "Formules.scss";
 
-/*GENERAL*/
 h1 {
-  font-size: 2.8rem;
+  font-size: 2.7rem;
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: bold;
   text-align: center;
-  margin-top: 10px;
-  padding-top: 5px;  
-  padding-bottom: 5px; 
   color: rgb(255, 255, 255);
   width: 90%;
   margin-right: auto;
   margin-left: auto;
 }
 
-h5 {
-  font-size: 1.5rem;
+
+h2 { /*Card-header*/
+  font-size: 1.4rem;
   text-align: center;
   font-weight: bold;
-  text-decoration: underline;
 }
 
-/*HOME*/
-
-.event_article  h5 {
-    background: #d3d3d3a8;
-    box-shadow: -0em 0 .8em #fc8702;  
-    padding: 5px;
-    margin-bottom: 10px;
-    text-decoration: none; 
-}
-
-/*EVENT*/ 
-
-/*Modal Title*/
-#join_modal_label {
-  margin: auto;
-}
-
-/*CLUB*/
-
-.statuts_club h5 {
-  font-size: 14px;
+h3 { /*title statut of club*/
+  font-size: 1.3rem;
+  text-align: center;
+  font-weight: bold;
   color: rgb(0, 183, 255);
   font-style: oblique;
-  text-decoration: none;
   padding-top: 5px;
 }
 
+h5 { 
+  font-size: 1.6rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+h6 { /*Card-title*/
+  text-align: center;
+  font-weight: bold;
+  background: #d3d3d3a8;
+  box-shadow: -0em 0 .8em #fc8702;  
+  padding: 5px;
+  margin-bottom: 10px;
+  text-decoration: none; 
+}
+
+/* PAGE EVENT Modal Title H5*/
+#join_modal_label {
+  font-family: 'Gloria Hallelujah', cursive;
+  margin: auto;
+  color: black;
+}
 
 /*RESPONSIVE*/ 
 
 @media screen and (min-width: 576px) and (max-width: 1023px) { /* for tablette & landscape */ 
   
   /*GENERAL*/
-h1 {
-  font-size: 3.5rem;
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  h2 { /*Card-header*/
+    font-size: 1.7rem;
+  }
+
+  h3 { /*title statut of club*/
+    font-size: 1.5rem;
+  }
+
+  h5 { /* EVENT PAGE*/
+    font-size: 1.5rem;
+    text-decoration: underline;
+  }
+
+  h6 { /*Card-title*/
+    font-size: 1.2rem;
+  }
 }
 
-h5 {
-  font-size: 1.5rem;
-  text-align: center;
-  font-weight: bold;
-  text-decoration: underline;
+#join_modal_label {  /* Modal Title H5*/
+  text-decoration: none;
 }
- 
 
+
+@media screen and (min-width: 1024px)  { /* for desktop */ 
+  
+  h1 {
+    font-size: 5rem;
+    margin-top: -.05vw;
+  }
+
+  h2{
+    font-size: 2.7rem;
+  }
+
+  #sidebar h2 {
+    
+    font-size: 4.5rem;
+    margin-top: 30px;
+    padding-bottom: 50px;
+    font-weight: bold;
+    font-family: 'Gloria Hallelujah', cursive;
+  }
+
+  h3 {
+    font-size: 2.6rem;
+  }
+
+  h5 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  h6 {
+    font-size: 2rem;
+  }
 }
