--- a/scss/partial/_buttons.scss
+++ b/scss/partial/_buttons.scss
@@ -30,6 +30,7 @@
   margin-top: 11px;
 }
 
+
 #scroll_to_top {
   position:fixed;
   background: rgb(255, 251, 0);
@@ -45,6 +46,13 @@
 
 @media screen and (min-width: 576px) and (max-width: 1023px) {
   
+  #scroll_to_top {
+    bottom: 100px;
+    svg {
+      width: 30px;
+      height: 30px;
+    }
+  }
 /*Event*/
 
 .event_description {
@@ -67,16 +75,19 @@
     }
   }
 
-  #scroll_to_top {
-    bottom: 100px;
-    svg {
-      width: 30px;
-      height: 30px;
-    }
-  }
+  
 }
 
 @media screen and (min-width: 1024px){ /* for desktops */ 
+
+  #scroll_to_top {
+    background: rgb(255, 251, 0);
+    
+    svg {
+      width: 45px;
+      height: 45px;
+    }
+  }
   
   /*EVENT*/
   .event_description {
@@ -97,14 +108,14 @@
     }
   }
    
- 
+ /*Contact page*/
+
+  .contact_page .btn  {
+    margin-top: 5px;
+    font-size: $size_15;
+    width: 200px;
+    height: 50px;
+  } 
   
-  #scroll_to_top {
-    background: rgb(255, 251, 0);
-    
-    svg {
-      width: 45px;
-      height: 45px;
-    }
-  }
+  
 }
